src/test/deca/context/invalid/resultats/test_ident_method-cont.res
./src/test/deca/context/invalid/test_ident_method.deca:14:1: The identifier x already exists and it is not an method
